--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,16 @@
 {% extends "layout.html" %} {% block heading %} Login | Register {% endblock %} {% block body %}
 <main class="container-fluid">
 
-    <form>
+    <form action="{{ url_for('index') }}" method="post">
         <div class="form-group">
             <label for="inputEmail">Email address</label>
-            <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="user@domain.com" />
+            <input type="email" class="form-control" id="inputEmail" name="inputEmail" aria-describedby="emailHelp" />
             <small id="emailHelp" class="form-text text-muted">We'll never share your email!</small>
         </div>
 
         <div class="form-group">
-            <label for="inputPassword1">Password</label>
-            <input type="password" class="form-control" id="inputPassword" placeholder="*****" />
+            <label for="inputPassword">Password</label>
+            <input type="password" class="form-control" id="inputPassword" name="inputPassword" placeholder="*****" />
         </div>
 
         <button type="submit" name="" class="btn btn-primary">Submit</button>
