Fixed log in form

--- a/templates/error.html
+++ b/templates/error.html
@@ -1,2 +1,13 @@
-{% extends "layout.html" %} {% block title %} Error {% endblock %} {% block heading %} Error {% endblock %} {% block body
-%} {{ message }} {% endblock %}
+{% extends "layout.html" %}
+
+{% block title %}
+    Error
+{% endblock %}
+
+{% block heading %}
+    Error
+{% endblock %}
+
+{% block body %}
+    {{ message }}
+{% endblock %}
