--- a/templates/success.html
+++ b/templates/success.html
@@ -1,2 +1,13 @@
-{% extends "layout.html" %} {% block title %} Success {% endblock %} {% block heading %} Success {% endblock %} {% block
-body %} {{ message }} {% endblock %}
+{% extends "layout.html" %}
+
+{% block title %}
+    Success
+{% endblock %}
+
+{% block heading %}
+    Welcome!
+{% endblock %}
+
+{% block body %}
+    {{ message }}
+{% endblock %}
