Finished importing books from csv file to database

--- a/templates/search.html
+++ b/templates/search.html
@@ -1,15 +1,15 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Success
+    Search
 {% endblock %}
 
 {% block heading %}
-    Welcome!
+    Search books...
 {% endblock %}
 
 {% block body %}
-    {{ message }}
 
-    <a href="{{ url_for('logout') }}">Logout</a>
+
+
 {% endblock %}
