API calls and README update

--- a/templates/search.html
+++ b/templates/search.html
@@ -10,6 +10,29 @@
 
 {% block body %}
 
+    <main class="container-fluid">
 
+        {{message}}
+
+        <form method="post">
+            <div class="form-group">
+                <label for="inputBook">Enter search terms</label>
+                <input type="text" class="form-control" id="inputBook" name="inputBook" aria-describedby="bookHelp" required/>
+            </div>
+
+            <button type="submit" name="" class="btn btn-primary">Search</button>
+        </form>
+
+        <div id="results">
+
+        </div>
+
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <a href="{{ url_for('logout') }}">Logout</a>
+        </div>
+    </footer>
 
 {% endblock %}
