--- a/static/styles.css
+++ b/static/styles.css
@@ -13,3 +13,13 @@ main {
     max-width: 200px;
     margin: 0 auto;
 }
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+    text-align: center;
+}
