--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,24 @@
-{% extends "layout.html" %}
+{% extends "layout.html" %} {% block heading %} Login | Register {% endblock %} {% block body %}
 
-{% block heading %}
-    Login | Register
-{% endblock %}
+<main class="container-fluid">
 
-{% block body %}
+    {{ message }}
 
-    <main class="container-fluid">
+    <form action="{{ url_for('index') }}" method="post">
+        <div class="form-group">
+            <label for="inputEmail">Email address</label>
+            <input type="email" class="form-control" id="inputEmail" name="inputEmail" aria-describedby="emailHelp" required/>
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email!</small>
+        </div>
 
-        <form action="{{ url_for('index') }}" method="post">
-            <div class="form-group">
-                <label for="inputEmail">Email address</label>
-                <input type="email" class="form-control" id="inputEmail" name="inputEmail" aria-describedby="emailHelp" required/>
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email!</small>
-            </div>
+        <div class="form-group">
+            <label for="inputPassword">Password</label>
+            <input type="password" class="form-control" id="inputPassword" name="inputPassword" placeholder="*****" required/>
+        </div>
 
-            <div class="form-group">
-                <label for="inputPassword">Password</label>
-                <input type="password" class="form-control" id="inputPassword" name="inputPassword" placeholder="*****" required/>
-            </div>
+        <button type="submit" name="" class="btn btn-primary">Submit</button>
+    </form>
 
-            <button type="submit" name="" class="btn btn-primary">Submit</button>
-        </form>
-
-    </main>
+</main>
 
 {% endblock %}
