--- a/templates/search.html
+++ b/templates/search.html
@@ -12,12 +12,13 @@
 
     <main class="container-fluid">
 
-        {{message}}
+        {{ message }}
 
         <form method="post">
             <div class="form-group">
                 <label for="inputBook">Enter search terms</label>
-                <input type="text" class="form-control" id="inputBook" name="inputBook" aria-describedby="bookHelp" required/>
+                <input type="text" class="form-control" id="inputBook" name="inputBook" aria-describedby="bookHelp"
+                       required/>
             </div>
 
             <button type="submit" name="" class="btn btn-primary">Search</button>
