--- a/static/styles.css
+++ b/static/styles.css
@@ -15,11 +15,12 @@ main {
 }
 
 footer {
-    position: absolute;
+    padding: 20px 0;
+    position: fixed;
     bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    background-color: #f5f5f5;
+    left: 0;
+    right: 0;
     text-align: center;
+    width: 100%;
+    background-color: #f5f5f5;
 }
