--- a/templates/book.html
+++ b/templates/book.html
@@ -1,44 +1,46 @@
-{% extends "layout.html" %} {% block title %} Book Information {% endblock %} {% block heading %} Book Information {% endblock
-%} {% block body %}
+{% extends "layout.html" %} {% block title %} Book Information {% endblock %} {% block heading %} Book
+    Information {% endblock %} {% block body %}
 
-<main class="container-fluid">
+    <main class="container-fluid">
 
-    <ul>
-        <li>ISBN: {{ isbn }}</li>
-        <li>TITLE: {{ title }}</li>
-        <li>AUTHOR: {{ author }}</li>
-        <li>YEAR: {{ year }}</li>
-        <hr>
-        <li>YOUR RATING: {{ rating }}</li>
-        <li>YOUR COMMENT: {{ comment }}</li>
-    </ul>
+        <ul>
+            <li>ISBN: {{ isbn }}</li>
+            <li>TITLE: {{ title }}</li>
+            <li>AUTHOR: {{ author }}</li>
+            <li>YEAR: {{ year }}</li>
+            <hr>
+            <li>YOUR RATING: {{ rating }}</li>
+            <li>YOUR COMMENT: {{ comment }}</li>
+        </ul>
 
-    <form method="POST">
-        <div class="form-group">
-            <label for="ratingSelect">Rating</label>
-            <select class="form-control" id="ratingSelect" name="ratingSelect">
-                <option value="1" {% if rating==1 %} selected="selected" {% endif %}>1</option>
-                <option value="2" {% if rating==2 %} selected="selected" {% endif %}>2</option>
-                <option value="3" {% if rating==3 %} selected="selected" {% endif %}>3</option>
-                <option value="4" {% if rating==4 %} selected="selected" {% endif %}>4</option>
-                <option value="5" {% if rating==5 %} selected="selected" {% endif %}>5</option>
-            </select>
+        <form method="POST">
+            <div class="form-group">
+                <label for="ratingSelect">Rating</label>
+                <select class="form-control" id="ratingSelect" name="ratingSelect">
+                    <option value="1" {% if rating==1 %} selected="selected" {% endif %}>1</option>
+                    <option value="2" {% if rating==2 %} selected="selected" {% endif %}>2</option>
+                    <option value="3" {% if rating==3 %} selected="selected" {% endif %}>3</option>
+                    <option value="4" {% if rating==4 %} selected="selected" {% endif %}>4</option>
+                    <option value="5" {% if rating==5 %} selected="selected" {% endif %}>5</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="commentTextArea">Comment</label>
+                <textarea class="form-control" id="commentTextArea" name="commentTextArea"
+                          rows="3">{{ comment }}</textarea>
+            </div>
+
+            <button type="submit" name="" class="btn btn-primary">Submit review</button>
+        </form>
+
+
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <a href="{{ url_for('logout') }}">Logout</a>
         </div>
-
-        <div class="form-group">
-            <label for="commentTextArea">Comment</label>
-            <textarea class="form-control" id="commentTextArea" name="commentTextArea" rows="3">{{ comment }}</textarea>
-        </div>
-
-        <button type="submit" name="" class="btn btn-primary">Submit review</button>
-    </form>
-
-</main>
-
-<footer class="footer">
-    <div class="container">
-        <a href="{{ url_for('logout') }}">Logout</a>
-    </div>
-</footer>
+    </footer>
 
 {% endblock %}
